--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "type": "module",
   "scripts": {
-    "start": "node ./dist/app.js ",
+    "start": "node ./dist/app.js --env-file=.env ",
     "lint": "eslint . --no-ignore",
     "dev": "npx kill-port 3008 && npx nodemon --delay 1500ms ./src/app.ts",
     "build": "npx eslint . --no-ignore"
