--- a/web.config
+++ b/web.config
@@ -1,20 +1,22 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <!-- Envía todas las solicitudes a tu app Node.js -->
       <add name="iisnode" path="dist/app.js" verb="*" modules="iisnode" />
     </handlers>
 
     <rewrite>
       <rules>
-        <rule name="all">
+        <rule name="all" patternSyntax="ECMAScript" stopProcessing="true">
           <match url=".*" />
           <action type="Rewrite" url="dist/app.js" />
         </rule>
       </rules>
     </rewrite>
 
+    <security>
+      <requestFiltering allowDoubleEscaping="true" />
+    </security>
+
     <httpErrors errorMode="Detailed" />
-    <asp scriptErrorSentToBrowser="true"/>
   </system.webServer>
 </configuration>
