fix: enable IISNode routing via server.js for Windows App Service

--- a/web.config
+++ b/web.config
@@ -1,22 +1,27 @@
 <configuration>
   <system.webServer>
+    <!-- Indicamos a IIS que use Node para manejar las solicitudes -->
     <handlers>
-      <add name="iisnode" path="dist/app.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
 
+    <!-- Redirige todas las peticiones HTTP a Node.js -->
     <rewrite>
       <rules>
         <rule name="all" patternSyntax="ECMAScript" stopProcessing="true">
           <match url=".*" />
-          <action type="Rewrite" url="dist/app.js" />
+          <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
 
-    <security>
-      <requestFiltering allowDoubleEscaping="true" />
-    </security>
+    <!-- Configuración de IISNode -->
+    <iisnode 
+      nodeProcessCommandLine="C:\Program Files\nodejs\node.exe"
+      devErrorsEnabled="true"
+      loggingEnabled="true"
+    />
 
-    <httpErrors errorMode="Detailed" />
+    <httpErrors errorMode="Detailed"/>
   </system.webServer>
 </configuration>
